# Ecommerce-Analysis-AIAgent

./: .env  .gitignore  LICENSE  README.md  main.py  pyproject.toml  pyrightconfig.json  requirements.txt  test_scenarios.md
.devcontainer/: devcontainer.json
data/: agent_trace.db
logs/sessions/20260414_182525_734901/: trace.md
logs/sessions/20260414_182658_83653e/: trace.md
mcp_claude/: README.md
mcp_claude/data/: fs_X_sample.pickle  fs_Y_sample.pkl  time_info.csv
mcp_claude/data/output/: common_columns_sample.pickle  feature_data_augmentation.pickle  feature_data_common.pickle  feature_data_multi.pickle  feature_data_outlier.pickle  group_dict.csv  rank_matrix_smart_GAN_sample.pickle  wu_test_sample.pickle  wu_train_sample.pickle
mcp_claude/integrated/: call_test.py  config.py  server.py
mcp_claude/integrated/agents/: __init__.py
mcp_claude/integrated/pyarmor_runtime_000000/: __init__.py  pyarmor_runtime.pyd
mju-ecommerce-sft/: .gitattributes  Modelfile  qwen2.5-14b-sft-q4_k_m.gguf
scripts/: test_sllm.py
src/: config.py  graph.py  human_in_the_loop.py  llm_factory.py  llm_fallback.py  sllm_client.py  state.py
src/agents/: ag01_orchestrator.py  ag02_fe_agent.py  ag03_sql_agent.py  ag04_insight_agent.py  ag04_react_agent.py  ag05_report_agent.py
src/auth/: __init__.py  auth.py  auth_db.py
src/elens/: __init__.py
src/streamlit/: once.py
src/streamlit/pages/: admin.py
src/tools/analytics/: t11_kpi_calculator.py  t12_eda_viz.py  t13_feature_importance.py  t14_insight_action.py
src/tools/control/: t15_plan_parser.py  t16_hitl.py  t22_param_parser.py
src/tools/data/: t21_feature_cache.py  t8_upload_handler.py
src/tools/database/: sqlite_store.py  t10_schema_rag.py  t9_sql_tool.py
src/tools/output/: t17_persona_responder.py  t18_report_gen.py  t19_visualizer.py  t20_trace_logger.py
(+26 files in other folders)
